--- a/src/components/navbar/title.css
+++ b/src/components/navbar/title.css
@@ -1,13 +1,13 @@
-.slogan {
+.title {
     display: flex;
     flex-direction: row;
     margin: 20px;
   }
-  .slogan img {
+  .title img {
     height: 100px;
     width: auto;
   }
-  .slogan div {
+  .title div {
     padding-top: 25px;
     margin: auto 0;
     display: flex;
@@ -15,13 +15,13 @@
     align-items: center;
   }
   
-  .slogan div h1{
+  .title div h1{
     margin: auto 0; 
     font-size: 50px; 
     padding-left: 20px;
   }
   
-  .slogan div p{
+  .title div p{
     font-size: 20px; 
     padding-bottom: 15px; 
     font-family: Ocean;
