--- a/src/components/css/index.css
+++ b/src/components/css/index.css
@@ -1,26 +1,26 @@
 @font-face {
   font-family: AbsoluteEmpire;
-  src: url("./assets/fonts/aAbsoluteEmpire.ttf");
+  src: url("src/assets/fonts/aAbsoluteEmpire.ttf");
 }
 @font-face {
   font-family: Remingtoned;
-  src: url("./assets/fonts/Remingtoned Type.ttf");
+  src: url("src/assets/fonts/Remingtoned Type.ttf");
 }
 @font-face {
   font-family: Elegant;
-  src: url("./assets/fonts/ELEGANT TYPEWRITER Regular.ttf");
+  src: url("src/assets/fonts/ELEGANT TYPEWRITER Regular.ttf");
 }
 @font-face {
   font-family: Ocean;
-  src: url("./assets/fonts/Oceanside Typewriter.ttf");
+  src: url("src/assets/fonts/Oceanside Typewriter.ttf");
 }
 @font-face {
   font-family: Dry;
-  src: url("./assets/fonts/JMH Typewriter dry.otf");
+  src: url("src/assets/fonts/JMH Typewriter dry.otf");
 }
 @font-face {
   font-family: Modern;
-  src: url("./assets/fonts/MODERN TYPEWRITER.ttf");
+  src: url("src/assets/fonts/MODERN TYPEWRITER.ttf");
 }
 * {
   box-sizing: border-box;
@@ -61,77 +61,6 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-}
-
-/** PRODUCTOS **/
-
-main {
-  padding: 1fr;
-  margin-left: 500px; 
-  background-color: lightgray;
-  color: black;
-  padding: 2rem;
-  overflow: auto; /* Permite que el contenido principal haga scroll si es necesario */
-}
-
-.producto{
-  width: 100%;
-  height: 100%;
-}
-
-.producto p{
-  font-family: Ocean;
-  font-size: 25px;
-}
-
-.productos_titulo{
-  margin-bottom: 2rem;
-}
-
-.contenedor_productos{
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-  gap: 1rem;
-}
-
-.producto_imagen{
-  max-width: 100%;
-  border-radius: 1rem;
-}
-
-.producto_info{
-  color: rgb(255, 255, 255);
-  font-size: 1rem;
-  font-family: Dry;
-  padding: 1rem;
-  padding-top: 0;
-  background-image: url(./textures/textura-products-1.jpg);
-  background-size: cover; /* Ajusta la imagen para cubrir todo el fondo */
-  margin-top: -1rem;
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  border-bottom-left-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.producto_info h3{
-  height: 70px;
-  margin-bottom: 0;
-}
-
-.producto_agregar{
-  font-family: Dry;
-  background-color: white;
-  padding: 0.25rem;
-  border-radius: 2rem;
-  border: 2px solid white;
-  cursor: pointer;
-  transition: background-color, .2s, color .2s;
-}
-.producto_agregar:hover{
-  background-color: black;
-  color: white;
 }
 
 /** MODAL **/
