--- a/src/components/css/title.css
+++ b/src/components/css/title.css
@@ -1,15 +1,15 @@
 .title {
     display: flex;
     flex-direction: row;
+    justify-content: center;
     margin: 20px;
   }
   .title img {
-    height: 100px;
+    height: 70px;
     width: auto;
   }
   .title div {
-    padding-top: 25px;
-    margin: auto 0;
+    padding-left: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,12 +17,12 @@
   
   .title div h1{
     margin: auto 0; 
-    font-size: 50px; 
-    padding-left: 20px;
+    font-size: 40px; 
   }
   
   .title div p{
-    font-size: 20px; 
+    font-size: 18px; 
+    margin: auto 0; 
     padding-bottom: 15px; 
     font-family: Ocean;
   }
