--- a/src/components/css/contenedor_productos.css
+++ b/src/components/css/contenedor_productos.css
@@ -1,5 +1,7 @@
-.main {
+.main_productos {
   margin-left: 400px;
+  height: 100%;
+  size: 100%;
   background-color: red;
   color: black;
   overflow: auto; /* Permite que el contenido principal haga scroll si es necesario */
@@ -10,3 +12,7 @@
     gap: 1rem;
     padding: 0.5rem;
   }
+
+.main_productos h1{
+  padding-left: 20px;
+}
