--- a/src/components/css/title.css
+++ b/src/components/css/title.css
@@ -3,6 +3,7 @@
     flex-direction: row;
     justify-content: center;
     margin: 20px;
+    margin-left: 10px;
   }
   .title img {
     height: 70px;
