--- a/src/components/css/producto.css
+++ b/src/components/css/producto.css
@@ -14,7 +14,7 @@
     margin-bottom: 2rem;
   }
   
-  .producto_imagen{
+  .producto img{
     max-width: 100%;
     border-radius: 1rem;
   }
@@ -53,4 +53,3 @@
     background-color: black;
     color: white;
   }
-  
